--- a/cblog-web/src/main/resources/velocity.properties
+++ b/cblog-web/src/main/resources/velocity.properties
@@ -9,10 +9,10 @@ webapp.resource.loader.class = org.apache.velocity.tools.view.WebappResourceLoad
 webapp.resource.loader.path = /themes/
 webapp.resource.loader.cathe = false
 
-tools.view.servlet.layout.directory = /layout/
-tools.view.servlet.layout.default.template = default.vm
+#tools.view.servlet.layout.directory = /layout/
+#tools.view.servlet.layout.default.template = default.vm
 
-velocimacro.library = macro.vm
+
 velocimacro.library.autoreload = true
 velocimacro.permissions.allowInline = true
 
