--- a/cblog-web/pom.xml
+++ b/cblog-web/pom.xml
@@ -24,7 +24,14 @@
             <artifactId>cblog-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
+
     <build>
         <finalName>cblog-web</finalName>
     </build>
